--- a/src/common/components/fields/link/Link.module.css
+++ b/src/common/components/fields/link/Link.module.css
@@ -2,4 +2,8 @@ a.link {
     color: var(--secondary-color);
     font-weight: normal;
     text-decoration: none;
+
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-all;
 }
