--- a/src/common/components/layouts/Layout.module.css
+++ b/src/common/components/layouts/Layout.module.css
@@ -7,7 +7,7 @@
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: center;
-    gap: 30px;
+    gap: 3rem;
 }
 
 .vertical {
@@ -15,5 +15,5 @@
     flex-direction: column;
     align-items: stretch;
     width: 100%;
-    gap: 30px;
+    gap: 3rem;
 }
