--- a/src/components/detailsPage/pages/resources/ResourceMainContent.module.css
+++ b/src/components/detailsPage/pages/resources/ResourceMainContent.module.css
@@ -2,11 +2,10 @@ article.container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
-    align-self: flex-start;
+    align-items: stretch;
+    align-self: stretch;
 
     width: 100%;
-    height: 100%;
     padding: 2rem;
 
     background-color: var(--white);
@@ -16,6 +15,7 @@ article.container {
 
 .title {
     margin-top: 0;
+    word-break: break-all;
 }
 
 .detailContainer {
@@ -23,19 +23,7 @@ article.container {
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 4rem;
     grid-row-gap: 1rem;
-}
-
-.table {
-    display: table;
-    width: 100%;
-    border-collapse: collapse;
-}
-
-.cell {
-    display: table-cell;
-    width: 50%;
-    text-align: left;
-    vertical-align: top;
+    max-width: 120rem;
 }
 
 @media (max-width: 1200px) {
