--- a/src/components/detailsPage/pages/resources/components/actions/ResourceActions.module.css
+++ b/src/components/detailsPage/pages/resources/components/actions/ResourceActions.module.css
@@ -1,6 +1,7 @@
 .sidebarCardContainer {
     align-items: flex-start;
     padding: 2rem;
+    width: 100%;
 
     border-radius: 1rem;
     background-color: var(--white);
